--- a/views/links/index.erb
+++ b/views/links/index.erb
@@ -2,8 +2,7 @@
 <ul id = 'links'>
   <% @links.each {|link| %>
   <li>
-    Title: <%= link.title %>
-    URL:   <%= link.url   %>
+    <a href='<%= link.url %>'> <%= link.title %></a>
   </li>
   <% } %>
 </ul>
