--- a/views/links/new.erb
+++ b/views/links/new.erb
@@ -8,5 +8,8 @@
       TITLE:
       <input type="text" name="title">
     </label>
+    <label for = 'tag'>
+      TAG:
+      <input type="text" name="tags">
     <input type="submit" value="Create link">
   </form>
